fix overflow issue
* fix overflow changing topbar's height
* fix scrollbar hiding content
* changes color-scheme to dark

--- a/web/src/components/Dashboard/Topbar/Topbar.scss
+++ b/web/src/components/Dashboard/Topbar/Topbar.scss
@@ -6,6 +6,8 @@
   gap: 0.75rem;
   align-items: center;
   padding: 0.4rem 0.75rem;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 .dashboard__topbar__spacer {
